tests/ui/consts/promoted_running_out_of_memory_issue-130687.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/promoted_running_out_of_memory_issue-130687.rs:8:32
   |
LL | const _: &'static Data = &Data([0; (1 << 47) - 1]);
   |                                ^^^^^^^^^^^^^^^^^^ tried to allocate more memory than available to compiler

note: erroneous constant encountered
  --> $DIR/promoted_running_out_of_memory_issue-130687.rs:8:26
   |
LL | const _: &'static Data = &Data([0; (1 << 47) - 1]);
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
